# balsa

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  default.nix  flake.nix  header  shell.nix
doc/: Makefile.am  Makefile.in  components.txt
extra/: Makefile.in
extra/scintilla-wrapper/: Makefile.am  Makefile.in
share/: Makefile.am  Makefile.in
share/balsa/: Makefile.in
share/balsa/parts/: Makefile.am  Makefile.in
share/balsa/sim/: Makefile.am  Makefile.in  fileio.c  memory.c  sim.balsa  sim.c  string.balsa  string.c
share/balsa/types/: Makefile.am  Makefile.in  basic.balsa  builtin.c  types.c
share/scheme/: Makefile.am  Makefile.in  balsa-list-builtins.scm  balsa-make-helpers.scm  balsa-make-impl-test.scm  balsa-make-makefile.scm  balsa-make-test.scm  balsa-net-merge-netlists.scm  balsa-net-tran-cost.scm  balsa-netlist.scm  balsa-prog-banner.scm  balsa-sim-impl.scm  base-local.scm  base-local.scm.in  base.scm  base.scm.in  breeze-cost.scm  breeze2ps.scm  brz-parser.scm  brz-tech.scm  brz.scm  gen-espresso.scm  gen-gates.scm  gen-hcs.scm  gen-implicants.scm  gen-mofn-espresso.scm  gen-undeclared.scm  gen.scm  globals.scm  globals.scm.in  misc-banners.scm  misc-config.scm  misc-date.scm  misc-implicants.scm  misc-spans.scm  misc-switches.scm  misc.scm  net-connections.scm  net-insert-buffers.scm  net-modify.scm  (+3 more)
share/style/: Makefile.am  Makefile.in
share/style/dual_b/: ActiveEagerFalseVariable.abs  ActiveEagerNullAdapt.abs  Adapt.abs  Bar.abs  BuiltinVariable.abs  CallDemux.abs  CallMux.abs  CombineEqual.abs  Constant.abs  Encode.abs  FalseVariable.abs  Makefile.am  Makefile.in  NullAdapt.abs  PassivatorPush.abs  PassiveEagerFalseVariable.abs  PassiveEagerNullAdapt.abs  PassiveSyncEagerFalseVariable.abs  Variable.abs  startup.scm
share/style/four_b_rb/: ActiveEagerFalseVariable.abs  ActiveEagerNullAdapt.abs  Adapt.abs  BinaryFuncConstR.abs  BuiltinVariable.abs  CallMux.abs  Concur.abs  FalseVariable.abs  Fetch.abs  Makefile.am  Makefile.in  NullAdapt.abs  PassivatorPush.abs  PassiveEagerFalseVariable.abs  PassiveEagerNullAdapt.abs  PassiveSyncEagerFalseVariable.abs  Sequence.abs  Synch.abs  Variable.abs  startup.scm
share/style/four_e_e/: BuiltinVariable.abs  CallMux.abs  Case.abs  Concur.abs  Fetch.abs  Makefile.am  Makefile.in  PassivatorPush.abs  Sequence.abs  Variable.abs  startup.scm
share/style/one_of_2_4/: ActiveEagerFalseVariable.abs  ActiveEagerNullAdapt.abs  BinaryFunc.abs  BinaryFuncConstR.abs  FalseVariable.abs  Makefile.am  Makefile.in  NullAdapt.abs  PassivatorPush.abs  PassiveEagerFalseVariable.abs  PassiveEagerNullAdapt.abs  PassiveSyncEagerFalseVariable.abs  Variable.abs  startup.scm
share/tech/: Makefile.am  Makefile.in
share/tech/common/: Makefile.am  Makefile.in  components.abs  components.lst  definitions.abs  helper-cells.abs  helper-mappings  template-balsa-mgr.cfg
share/tech/example/: Makefile.am  Makefile.in  balsa-cells.net  balsa-mgr.cfg  components.abs  example-cells.m4  example-cells.net  example-cells.v  gate-mappings  startup.scm
share/tech/minimal/: Makefile.am  Makefile.in  balsa-cells.net  balsa-mgr.cfg  components.abs  gate-mappings  minimal-cells.net  minimal-cells.v  startup.scm
share/tech/xilinx/: Makefile.am  Makefile.in  balsa-cells.net  balsa-mgr.cfg  components.abs  gate-mappings  startup.scm  xilinx-cells.net
src/: Makefile.in
src/balsa-c/: Balsa.ag  Balsa.c  Balsa.lalr  Balsa.pars  BalsaScanSource.c  BalsaScanSource.h  Breeze.c  Breeze.lalr  Breeze.pars  BreezeScanSource.c  BreezeScanSource.h  DynArray.h  Errors.c  Errors.h  General.c  General.h  Idents.c  Idents.h  Makefile.am  Makefile.in  Positions.c  Positions.h  Semantics.c  Sets.c  Sets.h  StringMem.h  Tree.c  Tree.h  accesses.c  accesses.h  arith.c  arith.h  balsa-c.c  banner.h  block.c  block.h  callcontexts.c  callcontexts.h  channels.c  channels.h  (+51 more)
src/balsa-file-test/: Makefile.am  Makefile.in  main.c
src/balsa-mgr/: Makefile.am  Makefile.in  TODO  aboutdialogue.c  aboutdialogue.h  addfiledialogue.c  addfiledialogue.h  balsa-mgr.glade  balsa-mgr.gladep  buffer.c  buffer.h  builtinliboptsdialogue.c  builtinliboptsdialogue.h  callbacks.h  commands.c  commands.h  consolewindow.c  consolewindow.h  editor.c  editor.h  executionmanager.c  executionmanager.h  executionwindow.c  executionwindow.h  file.c  file.h  filemanager.c  filemanager.h  icons.c  icons.h  imploptsdialogue.c  imploptsdialogue.h  interface.c  interface.h  main.c  main.h  mainwindow.c  mainwindow.h  makefiletable.c  makefiletable.h  (+26 more)
src/balsa-mgr/pixmaps/: Makefile.am  Makefile.in
src/breeze-sim/: Makefile.am  Makefile.in  breezesim_plugin.h  components_4phase.c  components_4phase.h  components_4phase_broad.c  components_4phase_eagerfvs.c  components_4phase_early.c  components_4phase_hla.c  main.c  pattern_analysis.c  pattern_analysis.h  simulate.c  simulate.h  trace.c  trace.h
src/breeze-sim-ctrl/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  core.c  core.h  debug.c  debug.h  drawing.c  drawing.h  graphview.c  graphview.h  graphviewGUI.c  graphviewGUI.h  interface.c  libspring.c  libspring.h  libspring_internals.h  listview.c  listview.h  main.c  main.h  mainwindow2.c  mainwindow2.h  partitioning.c  partitioning.h  selectionview.c  selectionview.h  simtrace.c  simtrace.h  simulation.c  simulation.h  sourceview.c  sourceview.h  structure.c  structure.h  support.c  timelinebehaviourview.c  timelinebehaviourview.h  timelineview.c  (+1 more)
src/breeze-sim-ctrl/pixmaps/: Makefile.in
src/breeze-sim/debug/: Makefile.am  Makefile.in
src/breeze-sim/early/: Makefile.am  Makefile.in
src/breeze-sim/fast/: Makefile.am  Makefile.in
src/breeze-sim/mpi/: Makefile  Makefile.am  Makefile.in
src/libs/: Makefile.in
src/libs/balsasim/: Makefile.am  Makefile.in  bfile.c  bfile.h  bstring.c  bstring.h  builtin.c  builtin.h  list.c  list.h  object.c  (+5 more)
src/libs/format/: Makefile.am  Makefile.in  data.c  data.h  dictionary.c  dictionary.h  external.c  external.h  format.c  format.h  test1.c  test2.c
(+24 files in other folders)
