## Process this file with automake to produce Makefile.in

styledual_bdir = $(datadir)/style/dual_b

styledual_b_DATA = \
	startup.scm \
	ActiveEagerFalseVariable.abs \
	ActiveEagerNullAdapt.abs \
	Adapt.abs \
	Bar.abs \
	BinaryFunc.abs \
	BinaryFuncConstR.abs \
	BuiltinVariable.abs \
	CallDemux.abs \
	CallDemuxPush.abs \
	CallMux.abs \
	Case.abs \
	CaseFetch.abs \
	Combine.abs \
	CombineEqual.abs \
	Constant.abs \
	ContinuePush.abs \
	Encode.abs \
	FalseVariable.abs \
	Fetch.abs \
	ForkPush.abs \
	HaltPush.abs \
	NullAdapt.abs \
	PassivatorPush.abs \
	PassiveEagerFalseVariable.abs \
	PassiveEagerNullAdapt.abs \
	PassiveSyncEagerFalseVariable.abs \
	Slice.abs \
	Split.abs \
	SplitEqual.abs \
	SynchPull.abs \
	SynchPush.abs \
	UnaryFunc.abs \
	Variable.abs \
	While.abs

EXTRA_DIST = $(styledual_b_DATA)

lines:
	$(top_srcdir)/bin/count-lines $(styledual_b_DATA)
