## Process this file with automake to produce Makefile.in

stylefour_b_rbdir = $(datadir)/style/four_b_rb

stylefour_b_rb_DATA = \
	startup.scm \
	ActiveEagerFalseVariable.abs \
	ActiveEagerNullAdapt.abs \
	Adapt.abs \
	Arbiter.abs \
	Bar.abs \
	BinaryFunc.abs \
	BinaryFuncConstR.abs \
	BuiltinVariable.abs \
	Call.abs \
	CallActive.abs \
	CallDemux.abs \
	CallDemuxPush.abs \
	CallMux.abs \
	Case.abs \
	CaseFetch.abs \
	Combine.abs \
	CombineEqual.abs \
	Concur.abs \
	Constant.abs \
	Continue.abs \
	ContinuePush.abs \
	DecisionWait.abs \
	Encode.abs \
	FalseVariable.abs \
	Fetch.abs \
	Fork.abs \
	ForkPush.abs \
	Halt.abs \
	HaltPush.abs \
	Loop.abs \
	NullAdapt.abs \
	Passivator.abs \
	PassivatorPush.abs \
	PassiveEagerFalseVariable.abs \
	PassiveEagerNullAdapt.abs \
	PassiveSyncEagerFalseVariable.abs \
	Sequence.abs \
	Slice.abs \
	Split.abs \
	SplitEqual.abs \
	Synch.abs \
	SynchPull.abs \
	SynchPush.abs \
	UnaryFunc.abs \
	Variable.abs \
	While.abs \
	WireFork.abs

EXTRA_DIST = $(stylefour_b_rb_DATA)

lines:
	$(top_srcdir)/bin/count-lines $(stylefour_b_rb_DATA)
