## Process this file with automake to produce Makefile.in

styleone_of_2_4dir = $(datadir)/style/one_of_2_4

styleone_of_2_4_DATA = \
	startup.scm \
	ActiveEagerFalseVariable.abs \
	ActiveEagerNullAdapt.abs \
	Adapt.abs \
	Bar.abs \
	BinaryFunc.abs \
	BinaryFuncConstR.abs \
	BuiltinVariable.abs \
	CallDemux.abs \
	CallDemuxPush.abs \
	CallMux.abs \
	Case.abs \
	CaseFetch.abs \
	Combine.abs \
	CombineEqual.abs \
	Constant.abs \
	ContinuePush.abs \
	Encode.abs \
	FalseVariable.abs \
	Fetch.abs \
	ForkPush.abs \
	HaltPush.abs \
	NullAdapt.abs \
	PassivatorPush.abs \
	PassiveEagerFalseVariable.abs \
	PassiveEagerNullAdapt.abs \
	PassiveSyncEagerFalseVariable.abs \
	Slice.abs \
	Split.abs \
	SplitEqual.abs \
	SynchPull.abs \
	SynchPush.abs \
	UnaryFunc.abs \
	Variable.abs

EXTRA_DIST = $(styleone_of_2_4_DATA)

lines:
	$(top_srcdir)/bin/count-lines $(styleone_of_2_4_DATA)
