## Process this file with automake to produce Makefile.in

SUBDIRS =

techcommondir = $(datadir)/tech/common

techcommon_DATA = \
	components.abs \
	components.lst \
	helper-cells.abs \
	helper-mappings \
	template-balsa-mgr.cfg \
	definitions.abs \
	dual-rail-definitions.abs \
	one-of-four-definitions.abs \
	common

EXTRA_DIST = $(techcommon_DATA)
