## Process this file with automake to produce Makefile.in

techexampledir = $(datadir)/tech/example

techexample_DATA = \
	startup.scm \
	balsa-cells.net \
	example-cells.net \
	example-cells.v \
	components.abs \
	gate-mappings \
	balsa-mgr.cfg

EXTRA_DIST = $(techexample_DATA) \
	example-cells.m4
