## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	balsa-block.xpm \
	balsa-block-with-exclamation.xpm \
	balsa.xpm \
	breeze-block.xpm \
    builtin-lib.xpm \
	directory.xpm \
	implementation.xpm \
	input-file-port.xpm \
	input-port.xpm \
	input-value-port.xpm \
	memory-component.xpm \
	options.xpm \
	output-file-port.xpm \
	output-port.xpm \
	output-stdout-port.xpm \
	procedure.xpm \
	selected.xpm \
	sync-port.xpm \
	tick.xpm \
	undefined-port.xpm

